<resources>
    <string name="app_name">MyTestApp</string>
    <!--MainActivity -->
    <string name="main_btn1_text">测试点赞动画效果</string>
    <string name="main_btn2_text">测试按钮控制翻页</string>
    <string name="main_btn3_text">测试三角形标签</string>
    <string name="main_btn4_text">测试dialogActivity</string>
    <string name="main_btn5_text">仿IOS底部弹出框</string>
    <string name="main_btn6_text">侧滑菜单的实现（NavigationView）</string>
    <string name="main_btn7_text">RecyclerView嵌套RecyclerView</string>
    <string name="main_btn8_text">对象排序</string>
    <string name="main_btn9_text">RecyclerView上拉加载更多</string>
    <string name="main_btn10_text">RecyclerView悬浮</string>
    <string name="main_btn11_text">自定义View</string>
    <string name="main_btn12_text">阿里热修复</string>

</resources>
