<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liliu.app.mytestapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn1_text" />

        <Button
            android:id="@+id/main_btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn2_text" />

        <Button
            android:id="@+id/main_btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn3_text" />

        <Button
            android:id="@+id/main_btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn4_text" />

        <Button
            android:id="@+id/main_btn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn5_text" />

        <Button
            android:id="@+id/main_btn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn6_text" />

        <Button
            android:id="@+id/main_btn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn7_text" />

        <Button
            android:id="@+id/main_btn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn8_text" />

        <Button
            android:id="@+id/main_btn_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn9_text" />

        <Button
            android:id="@+id/main_btn_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn10_text" />

        <Button
            android:id="@+id/main_btn_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn11_text" />

        <Button
            android:id="@+id/main_btn_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn12_text" />

    </LinearLayout>


</ScrollView>
